# ChangeLog for kde-base/kdeaccessibility-iconthemes
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaccessibility-iconthemes/ChangeLog,v 1.49 2006/09/17 22:52:57 carlo Exp $

  17 Sep 2006; Carsten Lohrke <carlo@gentoo.org>
  -kdeaccessibility-iconthemes-3.4.3.ebuild:
  Drop KDE 3.4.

  03 Sep 2006; Bryan Østergaard <kloeri@gentoo.org>
  kdeaccessibility-iconthemes-3.5.2.ebuild:
  Stable on ia64.

*kdeaccessibility-iconthemes-3.5.4 (25 Jul 2006)

  25 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
  +kdeaccessibility-iconthemes-3.5.4.ebuild:
  Bump to 3.5.4 (pre-release).

*kdeaccessibility-iconthemes-3.5.3 (01 Jun 2006)

  01 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
  +kdeaccessibility-iconthemes-3.5.3.ebuild:
  Update to new release.

  01 Jun 2006; Thomas Cort <tcort@gentoo.org>
  kdeaccessibility-iconthemes-3.5.2.ebuild:
  Stable on alpha wrt Bug #132213.

  29 May 2006; Jason Wever <weeve@gentoo.org>
  kdeaccessibility-iconthemes-3.5.2.ebuild:
  Stable on SPARC wrt bug #132213.

  29 May 2006; Markus Rothe <corsair@gentoo.org>
  kdeaccessibility-iconthemes-3.5.2.ebuild:
  Stable on ppc64

  29 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  -kdeaccessibility-iconthemes-3.4.1.ebuild,
  -kdeaccessibility-iconthemes-3.4.2.ebuild:
  Drop old versions.

  26 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  kdeaccessibility-iconthemes-3.5.2.ebuild:
  Stable on amd64 wrt bug #132213

  25 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  kdeaccessibility-iconthemes-3.5.2.ebuild:
  Stable on x86 wrt bug #132213

  05 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  -kdeaccessibility-iconthemes-3.5.0.ebuild,
  -kdeaccessibility-iconthemes-3.5.1.ebuild:
  Removed old 3.5.0/3.5.1 packages.

  28 Mar 2006; Aron Griffis <agriffis@gentoo.org>
  kdeaccessibility-iconthemes-3.5.0.ebuild,
  kdeaccessibility-iconthemes-3.5.1.ebuild,
  kdeaccessibility-iconthemes-3.5.2.ebuild: