@@ -1,0 +1,3 @@
+MD5 a227e65e012b83c8635f6e16c4dc3259 kdeaccessibility-3.5.5.tar.bz2 8610846
+RMD160 6fd9d284eb2c001270f317c92a1d68086af28868 kdeaccessibility-3.5.5.tar.bz2 8610846
+SHA256 c7f7ac0b1b2fb19e1ca22209e14bb12108094d5b12574ce2cf9683a497233030 kdeaccessibility-3.5.5.tar.bz2 8610846
