@@ -1,0 +1,14 @@
+# Copyright 1999-2006 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaccessibility-iconthemes/kdeaccessibility-iconthemes-3.5.5.ebuild,v 1.1 2006/10/03 09:36:28 flameeyes Exp $
+
+KMMODULE=IconThemes
+KMNAME=kdeaccessibility
+MAXKDEVER=$PV
+KM_DEPRANGE="$PV $MAXKDEVER"
+inherit kde-meta
+
+DESCRIPTION="Icon themes for kde from the kdeaccessibility module"
+KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86"
+IUSE=""
+DEPEND=""
