@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdeaccessibility-iconthemes
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaccessibility-iconthemes/ChangeLog,v 1.49 2006/09/17 22:52:57 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaccessibility-iconthemes/ChangeLog,v 1.50 2006/10/03 09:36:28 flameeyes Exp $
+
+*kdeaccessibility-iconthemes-3.5.5 (03 Oct 2006)
+
+  03 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
+  +kdeaccessibility-iconthemes-3.5.5.ebuild:
+  Bump to 3.5.5 (pre-release).
 
   17 Sep 2006; Carsten Lohrke <carlo@gentoo.org>
   -kdeaccessibility-iconthemes-3.4.3.ebuild:
